[gd_scene load_steps=52 format=2]

[ext_resource path="res://GameAssets/enemies/Knight/idle/4.png" type="Texture" id=1]
[ext_resource path="res://GameAssets/enemies/Knight/idle/6.png" type="Texture" id=2]
[ext_resource path="res://GameAssets/enemies/Knight/idle/8.png" type="Texture" id=3]
[ext_resource path="res://GameAssets/enemies/Knight/idle/1.png" type="Texture" id=4]
[ext_resource path="res://GameAssets/enemies/Knight/idle/9.png" type="Texture" id=5]
[ext_resource path="res://GameAssets/enemies/Knight/idle/2.png" type="Texture" id=6]
[ext_resource path="res://GameAssets/enemies/Knight/idle/3.png" type="Texture" id=7]
[ext_resource path="res://GameAssets/enemies/Knight/idle/7.png" type="Texture" id=8]
[ext_resource path="res://GameAssets/enemies/Knight/idle/10.png" type="Texture" id=9]
[ext_resource path="res://GameAssets/enemies/Knight/idle/11.png" type="Texture" id=10]
[ext_resource path="res://GameAssets/enemies/Knight/idle/12.png" type="Texture" id=11]
[ext_resource path="res://GameAssets/enemies/Knight/idle/0.png" type="Texture" id=12]
[ext_resource path="res://GameAssets/enemies/Knight/idle/13.png" type="Texture" id=13]
[ext_resource path="res://GameAssets/enemies/Knight/idle/5.png" type="Texture" id=14]
[ext_resource path="res://GameAssets/enemies/Knight/Death/7.png" type="Texture" id=15]
[ext_resource path="res://GameAssets/enemies/Knight/Run/1.png" type="Texture" id=16]
[ext_resource path="res://GameAssets/enemies/Knight/Run/6.png" type="Texture" id=17]
[ext_resource path="res://GameAssets/enemies/Knight/Run/0.png" type="Texture" id=18]
[ext_resource path="res://GameAssets/enemies/Knight/Run/2.png" type="Texture" id=19]
[ext_resource path="res://GameAssets/enemies/Knight/Run/3.png" type="Texture" id=20]
[ext_resource path="res://GameAssets/enemies/Knight/Run/7.png" type="Texture" id=21]
[ext_resource path="res://GameAssets/enemies/Knight/Run/4.png" type="Texture" id=22]
[ext_resource path="res://GameAssets/enemies/Knight/Death/1.png" type="Texture" id=23]
[ext_resource path="res://GameAssets/enemies/Knight/Death/2.png" type="Texture" id=24]
[ext_resource path="res://GameAssets/enemies/Knight/Death/0.png" type="Texture" id=25]
[ext_resource path="res://GameAssets/enemies/Knight/Death/3.png" type="Texture" id=26]
[ext_resource path="res://GameAssets/enemies/Knight/Death/4.png" type="Texture" id=27]
[ext_resource path="res://GameAssets/enemies/Knight/Death/5.png" type="Texture" id=28]
[ext_resource path="res://GameAssets/enemies/Knight/Death/6.png" type="Texture" id=29]
[ext_resource path="res://GameAssets/enemies/Knight/Run/5.png" type="Texture" id=30]
[ext_resource path="res://GameAssets/enemies/Knight/Death/12.png" type="Texture" id=31]
[ext_resource path="res://GameAssets/enemies/Knight/Death/8.png" type="Texture" id=32]
[ext_resource path="res://GameAssets/enemies/Knight/Death/9.png" type="Texture" id=33]
[ext_resource path="res://GameAssets/enemies/Knight/Death/11.png" type="Texture" id=34]
[ext_resource path="res://GameAssets/enemies/Knight/Death/10.png" type="Texture" id=35]
[ext_resource path="res://GameAssets/enemies/Knight/Death/14.png" type="Texture" id=36]
[ext_resource path="res://GameAssets/enemies/Knight/Death/13.png" type="Texture" id=37]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/18.png" type="Texture" id=38]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/19.png" type="Texture" id=39]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/14.png" type="Texture" id=40]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/15.png" type="Texture" id=41]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/20.png" type="Texture" id=42]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/7.png" type="Texture" id=43]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/13.png" type="Texture" id=44]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/12.png" type="Texture" id=45]
[ext_resource path="res://GameAssets/enemies/Knight/Atack/17.png" type="Texture" id=46]
[ext_resource path="res://KnightEnemy.gd" type="Script" id=47]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 42 ) ],
"loop": true,
"name": "Attack",
"speed": 13.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 15 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 37 ), ExtResource( 36 ) ],
"loop": true,
"name": "Death",
"speed": 30.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 13.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 17 ), ExtResource( 21 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.76617, 27.7478 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.43775, 25.9853 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 224.672, 6.41011 )

[node name="KnightEnemy" type="KinematicBody2D"]
position = Vector2( 81.8396, 34.3865 )
script = ExtResource( 47 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 10.3467, 37.0388 )
scale = Vector2( 1.86223, 1.87661 )
frames = SubResource( 1 )
animation = "Death"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.66, 37.2092 )
shape = SubResource( 2 )

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 2.20063, 36.9706 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.522209, 43.8385 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="LifeCounter" type="Label" parent="."]
margin_left = -17.3915
margin_top = -22.5686
margin_right = 22.6085
margin_bottom = -8.5686
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="DeathArea" to="." method="_on_DeathArea_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
